--- a/ProductCatalogAPI/appsettings.json
+++ b/ProductCatalogAPI/appsettings.json
@@ -1,5 +1,6 @@
 {
   "ConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CatalogDb;Integrated Security=True;Connect Timeout=30;",
+  "Externalbaseurl":  "https://localhost:44332",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
