--- a/ProductCatalogAPI/ProductCatalogAPI.csproj
+++ b/ProductCatalogAPI/ProductCatalogAPI.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>e0b35772-260b-484c-9881-ab14f352932a</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
