--- a/TokenServiceAPI/appsettings.json
+++ b/TokenServiceAPI/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "ConnectionString": "Server=tokensqlserver;Database=TokenServiceDb;User Id=sa;Password=ProductApi(!);",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
