--- a/TokenServiceAPI/TokenServiceAPI.csproj
+++ b/TokenServiceAPI/TokenServiceAPI.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>98b6ec4f-4aa0-408e-876a-cac823b59041</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>rsacert.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
