--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,14 @@ services:
     networks:
       - backend
 
+  basket.data:
+    image: redis
+    ports:
+      - "7050:6379"
+    container_name: basketdata
+    networks:
+      - backend
+
   catalog:
     image: jewels/catalogapi
     build:
@@ -46,6 +54,25 @@ services:
       - backend
     depends_on:
       - mssqlserver
+
+  cart:
+    image: jewels/cartapi
+    build:
+      context: .\CartApi
+      dockerfile: Dockerfile
+    environment:
+      ASPNETCORE_ENVIRONMENT: Development
+      IdentityUrl: http://192.168.1.102:7800
+      ConnectionString: basket.data
+    ports:
+      - "7010:80"
+    container_name: jewelscartapi
+    networks:
+      - frontend
+      - backend
+    depends_on:
+      - tokenserver
+      - basket.data
 
   webmvc:
     image: jewels/webmvc
