--- a/WebMvc/WebMvc.csproj
+++ b/WebMvc/WebMvc.csproj
@@ -41,6 +41,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Polly" Version="7.2.3" />
+    <PackageReference Include="Stripe.net" Version="39.105.0" />
   </ItemGroup>
 
 
